07.12 Changed security logic, added basic methods: registration, login, creating recipe and finding the recipe by id. Created table Security for saving login and password in the different place.